--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Medishop</title>
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Anton|Lexend+Deca|Montserrat:400,700|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
